# appTCP

./: CMakeLists.txt  README.md
src/: client.c  server.c
